# VerifAI

./: .gitignore  .readthedocs.yml  README.md  error_table.csv  falsify_uber.py  pyproject.toml  run_scenic.py  scenic_driving.scenic  setup.py  test_multi_ce.ipynb  test_multi_ce.py  test_newtonian.py  test_parallel_verifai.py  tox.ini  uberCrash.scenic  uberCrashNewton.scenic
demo/: carlaChallenge1.scenic  carlaChallenge6.scenic  install.sh  intersection_example.scenic  uberCrashNewton.scenic  verifai_example.ipynb  verifai_example_newtonian.ipynb
docs/: basic_usage.rst  conf.py  dynamics.rst  feature_api.rst  index.rst  installation.rst  multi_objective.rst  parallel_falsification.md  parallel_falsification.rst  publications.rst  requirement.txt  requirements.txt  samplers.rst  tutorial.md
examples/carla/: README.md
examples/carla/overtake_control/: overtake_control_falsifier.py  overtake_control_simulator.py
examples/carla/pid_control/: pid_control_falsifier.py  pid_control_simulator.py
examples/carla/scenic/: README.txt  adjacentOpposingPair.sc  adjacentOpposingPair.scenic  carlaChallenge1.scenic  carlaChallenge2.scenic  scenic_sampler.py  scenic_simulator.py
examples/compositional_analysis/: .gitignore  README.md  analyze.py  example.py  exps.sh  run_exp.py  test.py  train.py  utils.py
examples/data_augmentation/: classifier.py  falsifier.py
examples/data_augmentation/model/: dataset.py  model.py
examples/data_augmentation/renderer/: utils.py
examples/dynamic_rulebook/: .gitignore  README.md  multi.py  result_reporter.py  rule_helpers.py  run_multi_dynamic.sh
examples/dynamic_rulebook/multi_01/: multi_01.scenic  multi_01.sgraph  multi_01_00.graph  multi_01_01.graph  multi_01_02.graph  multi_01_segment.py  multi_01_spec.py
examples/dynamic_rulebook/multi_02/: multi_02.scenic  multi_02.sgraph  multi_02_00.graph  multi_02_01.graph  multi_02_segment.py  multi_02_spec.py
examples/dynamic_rulebook/multi_03/: multi_03.scenic  multi_03.sgraph  multi_03_00.graph  multi_03_01.graph  multi_03_02.graph  multi_03_segment.py  multi_03_spec.py
examples/dynamic_rulebook/multi_inter_left/: multi_inter_left.scenic  multi_inter_left.sgraph  multi_inter_left_00.graph  multi_inter_left_02.graph  multi_inter_left_segment.py  multi_inter_left_spec.py
examples/dynamic_rulebook/multi_inter_right/: multi_inter_right.scenic  multi_inter_right_01.graph  multi_inter_right_02.graph  multi_inter_right_segment.py
examples/dynamic_rulebook/multi_inter_straight/: multi_inter_straight.scenic  multi_inter_straight_02.graph  multi_inter_straight_segment.py
examples/modd/: README.md  modd_learner_main.py  modd_torch.py
examples/modd/carla/: controller_training.py  data_generation.py  followCarBehaviorMODD.scenic  followCarBehavior_extracar.scenic  followLeader_datagen.scenic  followLeader_extracar.scenic  followLeader_extracar_NN.scenic  modd_torch.py  static_sensors.py
examples/multi_objective/: intersection_01.scenic  multi_objective_falsification.py  uberCrashNewton.scenic
examples/openai_gym/cartpole/: cartpole_falsifier.py  cartpole_simulation.py
examples/openai_gym/mountaincar/: mountaincar_falsifier.py  mountaincar_simulation.py
examples/scenic/: README.md  falsify_distance.py  modd_learner_main.py
examples/scenic/carla/: carlaChallenge1.scenic  error_table.csv  safe_table.csv  scenic_sampler.py
examples/scenic/newtonian/: carlaChallenge2.scenic  safe_table.csv  scenic_sampler.py
examples/webots/data/: gaussian_lc.pickle  sample_xz.pickle
examples/webots/worlds/: example.wbt  scenic_intersection.wbt  shattuck_build.wbt  shattuck_buildings_falsif.wbt
examples/xplane/: elevations.csv  example.scenic
experiments/: README.md  experiments.py  ieee_metrics.py  intersection_01.scenic  run_remaining.sh  uberCrashNewton.scenic
experiments/behavior_prediction/: README.md  __main__.py
experiments/behavior_prediction/intersection/: intersection_01.scenic  intersection_02.scenic  intersection_03.scenic  intersection_04.scenic  intersection_05.scenic  intersection_06.scenic
experiments/behavior_prediction/passing/: passing_01.scenic  passing_02.scenic  passing_03.scenic  passing_04.scenic  passing_05.scenic
experiments/behavior_prediction/roundabout/: roundabout_01.scenic
src/verifai/: __init__.py  client.py  compositional_analysis.py  error_table.py  falsifier.py  monitor.py  rulebook.py  scenic_server.py  server.py
src/verifai/features/: __init__.py  features.py
tests/: scenic_driving.scenic  test_compositional_analysis.py  test_crossEntropy.py  test_dynamic_rulebook_ce.py  test_dynamic_rulebook_emab.py  test_dynamic_rulebook_mab.py  test_examples.py  test_features.py  test_glisOptimization.py  test_grid.py  test_halton.py  test_rulebook.py  test_samplers.py  test_scenic.py  test_simulatedAnnealing.py  utils.py
tests/scenic/: scenic_driving_behavior.scenic  test_scenic.py
verifai/: __init__.py  client.py  error_table.py  falsifier.py  monitor.py  server.py
verifai/features/: features.py
verifai/samplers/: __init__.py  bayesian_optimization.py  cross_entropy.py  domain_sampler.py  feature_sampler.py  grid_sampler.py  halton.py  random_sampler.py  scenic_sampler.py  simulated_annealing.py
verifai/simulators/: __init__.py
verifai/tests/: road.wbt  scenic_mars.sc  scenic_mars.scenic  scenic_road.sc  scenic_road.scenic  test_bayesianOptimization.py  test_crossEntropy.py  test_distBO.py  test_domains.py  test_halton.py  test_samplers.py  test_scenic.py  test_simulatedAnnealing.py
verifai/utils/: utils.py
(+426 files in other folders)
