[tool.poetry]
name = "verifai"
version = "2.0.0b1"
description = "A toolkit for the formal design and analysis of systems that include artificial intelligence (AI) and machine learning (ML) components."
repository = "https://github.com/BerkeleyLearnVerify/VerifAI"
license = "BSD-3-Clause"
authors = [
	"Tommaso Dreossi",
	"Daniel Fremont <dfremont@ucsc.edu>",
	"Shromona Ghosh",
	"Edward Kim <ek65@berkeley.edu>",
	"Hadi Ravanbakhsh",
	"Marcell Vazquez-Chanlatte",
	"Sanjit A. Seshia"
]
maintainers = [
	"Daniel Fremont <dfremont@ucsc.edu>",
	"Edward Kim <ek65@berkeley.edu>"
]
readme = "README.md"
documentation = "https://verifai.readthedocs.io"
classifiers = [
	'Operating System :: OS Independent',
	'Development Status :: 4 - Beta',
]

[tool.poetry.dependencies]
python = "^3.8.0"
numpy = "^1.18.2"
scipy = "^1.4.1"
dotmap = "^1.3.13"
metric-temporal-logic = "^0.1.5"
matplotlib = "^3.2.1"
easydict = "^1.9"
joblib = "^0.14.1"
dill = "^0.3.1"
future = "^0.18.2"
pandas = "^1.0.3"
scikit-learn = "^0.22.2"
pygame = "^2.0.0.dev6"
kmodes = "^0.10.2"
scenic = "^2.0.0b1"

GPy = {version = "^1.9.9", optional = true}
GPyOpt = {version = "^1.2.6", optional = true}

tensorflow = {version = "^1.8.0", optional = true}
gym = {version = "^0.17.1", optional = true}

opencv-python = {version = "^4.2.0", optional = true}
Pillow = {version = "^7.0.0", optional = true}

pytest = {version = "^5.4.1", optional = true}
pytest-randomly = {version = "^3.2.1", optional = true}
tox = {version = "^3.14.0", optional = true}
sphinx = {version = "^2.4.4", optional = true}
sphinx-autodoc-typehints = {version = "^1.10.3", optional = true}
sphinx-rtd-theme = {version = "^0.4.3", optional = true}
recommonmark = {version = "^0.6.0", optional = true}

[tool.poetry.extras]
bayesopt = ["GPy", "GPyOpt"]
examples = [
	"tensorflow",
	"gym",
	"opencv-python",
	"Pillow"
]
dev = [
	"pytest",
	"pytest-randomly",
	"tox",
	"sphinx",
	"sphinx-autodoc-typehints",
	"sphinx-rtd-theme",
	"recommonmark"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
