[tool.poetry]
name = "verifai"
version = "2.1.0b1"
description = "A toolkit for the formal design and analysis of systems that include artificial intelligence (AI) and machine learning (ML) components."
repository = "https://github.com/BerkeleyLearnVerify/VerifAI"
license = "BSD-3-Clause"
authors = [
	"Tommaso Dreossi",
	"Daniel Fremont <dfremont@ucsc.edu>",
	"Shromona Ghosh",
	"Edward Kim <ek65@berkeley.edu>",
	"Hadi Ravanbakhsh",
	"Marcell Vazquez-Chanlatte",
	"Sanjit A. Seshia"
]
maintainers = [
	"Daniel Fremont <dfremont@ucsc.edu>",
	"Edward Kim <ek65@berkeley.edu>"
]
readme = "README.md"
documentation = "https://verifai.readthedocs.io"
classifiers = [
	'Operating System :: OS Independent',
	'Development Status :: 4 - Beta',
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.5"
scipy = "^1.7.3"
dotmap = "^1.3.13"
metric-temporal-logic = "^0.1.5"
matplotlib = "^3.2.1"
easydict = "^1.9"
joblib = "^0.14.1"
dill = "^0.3.1"
future = "^0.18.2"
pandas = "^1.3.5"
scikit-learn = "^1.0"
pygame = "^2.1.0"
kmodes = "^0.10.2"
scenic = "^2.1.0b3"
ray = "^1.10.0"
progressbar2 = "^3.53.1"
networkx = "^2.6.3"
statsmodels = "^0.12.2"

GPy = {version = "^1.9.9", optional = true}
GPyOpt = {version = "^1.2.6", optional = true}

tensorflow = {version = "^2.8.0", optional = true}
gym = {version = "^0.22", optional = true}
pyglet = {version = "^1.5.11", optional = true}

opencv-python = {version = "^4.5.3", optional = true}
pillow = {version = "^9.0.1", optional = true}
pyproj = [
	{version = "^3.0.0", python = "<3.10", optional = true},
	{version = "^3.3.0", python = "^3.10", optional = true}
]

pytest = {version = "^5.4.1", optional = true}
pytest-randomly = {version = "^3.2.1", optional = true}
tox = {version = "^3.14.0", optional = true}
sphinx = {version = ">=3.3.0, <5", optional = true}
sphinx-rtd-theme = {version = "^0.5.2", optional = true}
recommonmark = {version = "^0.6.0", optional = true}

[tool.poetry.extras]
bayesopt = ["GPy", "GPyOpt"]
examples = [
	"tensorflow",
	"gym",
	"pyglet",
	"opencv-python",
	"pillow",
	"pyproj",
]
dev = [
	"pytest",
	"pytest-randomly",
	"tox",
	"sphinx",
	"sphinx-autodoc-typehints",
	"sphinx-rtd-theme",
	"recommonmark"
]
test = [	# minimum dependencies for running tests (used for tox virtualenvs)
	"pytest-randomly",
	"pytest",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
